[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Gameplay/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Source/Gameplay/HUD/ActivePlayerHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Gameplay/HUD/DeployMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Source/Gameplay/HUD/AttackingMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Source/Gameplay/HUD/MoveMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/Gameplay/HUD/GameOverMenu.tscn" type="PackedScene" id=6]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Overlay" type="ColorRect" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeployMenu" parent="HUD" instance=ExtResource( 3 )]
visible = false

[node name="ActivePlayerHUD" parent="HUD" instance=ExtResource( 2 )]
margin_top = -116.0
margin_bottom = -16.0
mouse_filter = 2

[node name="AttackingMenu" parent="HUD" instance=ExtResource( 4 )]
visible = false

[node name="MoveMenu" parent="HUD" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.5
margin_top = 217.0
margin_right = 927.5
margin_bottom = 503.0

[node name="GameoverMenu" parent="HUD" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 406.5
margin_top = 258.5
margin_right = 873.5
margin_bottom = 461.5

[node name="Activities" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 72.0
margin_bottom = 112.0
grow_horizontal = 0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
